RESOLVED FIXED47567
Wrong ASSERT when select element has size 0
https://bugs.webkit.org/show_bug.cgi?id=47567
Summary Wrong ASSERT when select element has size 0
Yael
Reported 2010-10-12 18:44:14 PDT
When clicking on a select element and then hitting up or down arrow key, an ASSERT is hit in SelectElement::listBoxDefaultEventHandler(). The ASSERT has wrong assumption and should be fixed. ASSERT_UNUSED(listItems, endIndex >= 0 && (unsigned) endIndex < listItems.size());
Attachments
Patch (4.30 KB, patch)
2010-10-12 19:55 PDT, Yael
no flags
Yael
Comment 1 2010-10-12 19:55:19 PDT
Created attachment 70579 [details] Patch Change the ASSERT so that it can handle size 0.
Andreas Kling
Comment 2 2010-10-13 05:12:19 PDT
Comment on attachment 70579 [details] Patch Nice catch, r=me
WebKit Commit Bot
Comment 3 2010-10-13 05:28:05 PDT
Comment on attachment 70579 [details] Patch Clearing flags on attachment: 70579 Committed r69651: <http://trac.webkit.org/changeset/69651>
WebKit Commit Bot
Comment 4 2010-10-13 05:28:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.