2010-10-13  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Andreas Kling.

        Wrong ASSERT when select element has size 0
        https://bugs.webkit.org/show_bug.cgi?id=47567

        * fast/dom/HTMLSelectElement/click-size-zero-no-crash-expected.txt: Added.
        * fast/dom/HTMLSelectElement/click-size-zero-no-crash.html: Added.
2010-10-13  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Andreas Kling.

        Wrong ASSERT when select element has size 0
        https://bugs.webkit.org/show_bug.cgi?id=47567

        Keep the ASSERT only if the size of the element list is more than 0
        Test: fast/dom/HTMLSelectElement/click-size-zero-no-crash.html

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::updateListBoxSelection):
        (WebCore::SelectElement::listBoxDefaultEventHandler):

Canonical link: https://commits.webkit.org/60244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69651 268f45cc-cd09-0410-ab3c-d52691b4dbfc